Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
73,243
Description
1. Right click on desktop.
2. Select last entry from context menu (Properties, Свойства).
3. Nothing happens (Display properties should open).
When menu opens, debug log gets this line:
CDefaultContextMenu.cpp:378: Unexpected failure 80004005.
|
This is a regression.
r73320 tested.
Attachments
Issue Links
- is duplicated by
-
CORE-12437 Regression: Selecting Properties from right click menu on desktop has no effect
-
- Resolved
-